--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "type": "module",
   "scripts": {
     "build": "react-router build",
-    "dev": "react-router dev",
-    "start": "react-router-serve ./build/server/index.js",
+    "dev": "NODE_OPTIONS='--import ./instrument.server.mjs' react-router dev",
+    "start": "NODE_OPTIONS='--import ./instrument.server.mjs' react-router-serve ./build/server/index.js",
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
     "@react-router/node": "^7.5.2",
     "@react-router/serve": "^7.5.2",
+    "@sentry/profiling-node": "^9.15.0",
+    "@sentry/react-router": "^9.15.0",
     "@syncfusion/ej2-base": "^29.1.36",
     "@syncfusion/ej2-react-buttons": "^29.1.34",
     "@syncfusion/ej2-react-charts": "^29.1.35",
@@ -19,6 +21,7 @@
     "@syncfusion/ej2-react-maps": "^29.1.34",
     "@syncfusion/ej2-react-navigations": "^29.1.38",
     "@syncfusion/ej2-react-splitbuttons": "^29.1.33",
+    "appwrite": "^17.0.2",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "isbot": "^5.1.17",
