--- a/.env.local
+++ b/.env.local
@@ -8,3 +8,9 @@ VITE_APPWRITE_DATABASE_ID=681365640038594cf9ad
 VITE_APPWRITE_USERS_COLLECTION_ID=6813659e003aa132edbd
 VITE_APPWRITE_TRIPS_COLLECTION_ID=681365d6002b1042fb31
 VITE_APPWRITE_API_ENDPOINT=https://cloud.appwrite.io/v1
+
+# Gemini
+GEMINI_API_KEY=AIzaSyBRqyovi8SHDn4WU1W5Mg6uA4pDiWNZFis
+
+# Unsplash
+UNSPLASH_ACCESS_KEY=FybL4_N7nsEIuvf1cYRA5gYMIyY6WxJw1E5rh-A5ZCQ
